# VisionProcessor

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  vcpkg-configuration.json
